task-2 minifixes. task-3 init boilerplate react

--- a/task-2/create.html
+++ b/task-2/create.html
@@ -12,13 +12,15 @@
 <body>
     <div id="container">
         <header class="header">
-            <img src="/images/logo.svg" class="header__logo">
+            <a href="index.html">
+                <img src="images/logo.svg" class="header__logo">
+            </a>
         </header>
         <main class="create-page">
             <div class="create-page-title">
                 <p>Новая встреча</p>
-                <a href="/">
-                    <img src="/images/close.svg">
+                <a href="index.html">
+                    <img src="images/close.svg">
                 </a>
             </div>
             <div class="df">
@@ -62,22 +64,22 @@
                         <input type="text" placeholder="">
                         <div class="members-inp-dropdown">
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/member1.png">
+                                <img src="images/member1.png">
                                 <div class="members-inp-dropdown-member__name">Лекс Лютер · <span>7 этаж</span></div>
                             </div>
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/member2.png">
+                                <img src="images/member2.png">
                                 <div class="members-inp-dropdown-member__name">Томас Андерсон · <span>2 этаж</span></div>
                             </div>
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/veider.png">
+                                <img src="images/veider.png">
                                 <div class="members-inp-dropdown-member__name">Дарт Вейдер · <span>1 этаж</span></div>
                             </div>
                         </div>
                     </div>
                     <div class="members">
                         <div class="member">
-                            <img src="/images/member1.png">
+                            <img src="images/member1.png">
                             <div class="member__name">Лекс Лютер</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -95,7 +97,7 @@
                             </div>
                         </div>
                         <div class="member">
-                            <img src="/images/member2.png">
+                            <img src="images/member2.png">
                             <div class="member__name">Томас Андерсон</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -113,7 +115,7 @@
                             </div>
                         </div>
                         <div class="member">
-                            <img src="/images/veider.png">
+                            <img src="images/veider.png">
                             <div class="member__name">Дарт Вейдер</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -157,7 +159,7 @@
         </div>
     </div>
     <div class="std-modal mfp-hide zoom-anim-dialog" id="created-modal">
-        <img src="/images/emoji2.svg">
+        <img src="images/emoji2.svg">
         <div class="std-modal__title">Встреча создана!</div>
         <div class="std-modal__info">14 декабря, 15:00—17:00</div>
         <div class="std-modal__info">Готем · 4 этаж</div>
