--- a/task-2/edit.html
+++ b/task-2/edit.html
@@ -14,13 +14,15 @@
 <body>
     <div id="container">
         <header class="header">
-            <img src="/images/logo.svg" class="header__logo">
+            <a href="index.html">
+                <img src="images/logo.svg" class="header__logo">
+            </a>
         </header>
         <main class="create-page">
             <div class="create-page-title">
-                <p>Новая встреча</p>
-                <a href="/">
-                    <img src="/images/close.svg">
+                <p>Редактирование встречи</p>
+                <a href="index.html">
+                    <img src="images/close.svg">
                 </a>
             </div>
             <div class="df">
@@ -64,19 +66,19 @@
                         <input type="text" placeholder="">
                         <div class="members-inp-dropdown">
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/member1.png">
+                                <img src="images/member1.png">
                                 <div class="members-inp-dropdown-member__name">Лекс Лютер ·
                                     <span>7 этаж</span>
                                 </div>
                             </div>
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/member2.png">
+                                <img src="images/member2.png">
                                 <div class="members-inp-dropdown-member__name">Томас Андерсон ·
                                     <span>2 этаж</span>
                                 </div>
                             </div>
                             <div class="members-inp-dropdown-member">
-                                <img src="/images/veider.png">
+                                <img src="images/veider.png">
                                 <div class="members-inp-dropdown-member__name">Дарт Вейдер ·
                                     <span>1 этаж</span>
                                 </div>
@@ -85,7 +87,7 @@
                     </div>
                     <div class="members">
                         <div class="member">
-                            <img src="/images/member1.png">
+                            <img src="images/member1.png">
                             <div class="member__name">Лекс Лютер</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -104,7 +106,7 @@
                             </div>
                         </div>
                         <div class="member">
-                            <img src="/images/member2.png">
+                            <img src="images/member2.png">
                             <div class="member__name">Томас Андерсон</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -123,7 +125,7 @@
                             </div>
                         </div>
                         <div class="member">
-                            <img src="/images/veider.png">
+                            <img src="images/veider.png">
                             <div class="member__name">Дарт Вейдер</div>
                             <div class="close">
                                 <svg width="10px" height="10px" viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -180,7 +182,7 @@
         </div>
     </div>
     <div class="std-modal mfp-hide zoom-anim-dialog" id="delete-modal">
-        <img src="/images/emoji.svg">
+        <img src="images/emoji.svg">
         <div class="std-modal__title">Встреча будет<br>удалена безвозвратно</div>
         <div class="btns">
             <button class="cancel">Отмена</button>
