--- a/task-2/index.html
+++ b/task-2/index.html
@@ -11,27 +11,29 @@
 <body>
     <div id="container">
         <header class="header">
-            <img src="/images/logo.svg" class="header__logo">
+            <a href="index.html">
+                <img src="images/logo.svg" class="header__logo">
+            </a>
             <a href="create.html" class="create-meeting">Создать встречу</a>
         </header>
         <main class="main-content">
             <div class="timeline">
                 <div class="calendar">
                     <div class="calendar-arrow calendar-arrow--left">
-                        <img src="/images/arrow2.svg">
+                        <img src="images/arrow2.svg">
                     </div>
                     <a class="calendar-date" href="#">14 дек · Сегодня</a>
                     <div class="calendar-arrow calendar-arrow--right">
-                        <img src="/images/arrow.svg">
+                        <img src="images/arrow.svg">
                     </div>
                     <div class="calendar-wrap" id="calendar-wrap" style="display: none;">
                         <div class="month">
                             <div class="month-arrow month-arrow--disabled">
-                                <img src="/images/arrow2.svg">
+                                <img src="images/arrow2.svg">
                             </div>
                             <div class="month__name">Январь</div>
                             <div class="month-arrow month-arrow">
-                                <img src="/images/arrow.svg">
+                                <img src="images/arrow.svg">
                             </div>
                         </div>
                         <div id="calendar"></div>
@@ -154,7 +156,7 @@
                             <div class="item item__full" style="width: 75px;"></div>
                             <div class="item item__full" style="width: 130px;background: gray;position: relative;z-index: 3;">
                                 <div class="item-tooltip">
-                                    <a href="#" class="edit">
+                                    <a href="edit.html" class="edit">
                                         <svg width="12px" height="12px" viewBox="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                 <g id="assets" transform="translate(-110.000000, -76.000000)">
@@ -171,7 +173,7 @@
                                     <div class="item-tooltip__description">14 декабря, 15:00—17:00 · Жёлтый дом</div>
                                     <div class="item-tooltip-members">
                                         <div class="item-tooltip-member">
-                                            <img src="/images/veider.png" class="item-tooltip-member__img">
+                                            <img src="images/veider.png" class="item-tooltip-member__img">
                                             <div class="item-tooltip-member__name">Дарт Вейдер <span>и еще 12 участников</span></div>
                                         </div>
                                     </div>
